--- a/assets/css/wiki.css
+++ b/assets/css/wiki.css
@@ -6,6 +6,10 @@
   font-size: 2em;
 }
 
+.wikisite main {
+  line-height: 170%;
+}
+
 .wikisite main h1 {
   margin-top: 0;
   line-height: 1.5em;
@@ -38,6 +42,42 @@
     margin: .25em 0;
 }
 
+.wikisite .collapsible {
+  background-color: #f5f5f5;
+  color: #333;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1.2em;
+  border: none;
+  outline: none;
+  text-align: left;
+  margin: 1em 0;
+}
+
+.wikisite .collapsible:after {
+  content: "\002B";
+}
+
+.wikisite .collapsible.active:after{
+  content: "\2212";
+}
+
+.wikisite .collapsible:hover {
+  background-color: #dcdcdc;
+}
+
+.wikisite .collapsible.active {
+  margin: 1em 0 0 0;
+}
+
+.wikisite .content {
+  display: none;
+  overflow: hidden;
+  padding: 1em 1em;
+  background-color: #f5f5f5;
+}
+
 @media (prefers-color-scheme: dark) {
   .wikisite #ftext {
     border-top-color: #0a5067;
@@ -46,5 +86,14 @@
 
   .wikisite #editsitecontent svg {
     color: #1b90b5;
+  }
+
+  .wikisite .collapsible {
+    background-color: #696969;
+    color: #ffffff;
+  }
+
+  .wikisite .collapsible:hover {
+    background-color: #454545;
   }
 }
